--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 13:05:03 2018</p>
+         Last Run: Wed Jul 18 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -30,51 +30,51 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>71</td>
-                        <td>54</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>55</td>
+                        <td>55</td>
                         <td>3</td>
-                        <td>13</td>
-                        <td>SE</td>
-                        <td>75</td>
+                        <td>14</td>
+                        <td>SSE</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>46</td>
-                        <td>57</td>
+                        <td>48</td>
+                        <td>58</td>
                         <td>2</td>
                         <td>14</td>
-                        <td>ESE</td>
-                        <td>62</td>
+                        <td>SE</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>24</td>
+                        <td>15</td>
                         <td>59</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>78</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>14</td>
+                        <td>10</td>
                         <td>61</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>E</td>
-                        <td>66</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,7 +119,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "21",
                  "21",
                  "20",
                  "20"
@@ -131,7 +131,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "21",
                  "21",
                  "20",
                  "20"
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "71",
-                 "46",
-                 "24",
-                 "14"
+                 "55",
+                 "48",
+                 "15",
+                 "10"
                ]
              },
              {
@@ -197,8 +197,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "57",
+                 "55",
+                 "58",
                  "59",
                  "61"
                ]
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "62",
-                 "78",
-                 "66"
+                 "64",
+                 "61",
+                 "71",
+                 "58"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 13:05:03 2018</p>
+         Last Run: Wed Jul 18 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -255,7 +255,7 @@
                         <td>0</td>
                         <td>44</td>
                         <td>3</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
                         <td>3</td>
                      </tr>
@@ -265,23 +265,23 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>39</td>
                         <td>4</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>2</td>
-                        <td>31</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>0</td>
+                        <td>32</td>
                         <td>6</td>
-                        <td>13</td>
-                        <td>W</td>
                         <td>11</td>
+                        <td>WSW</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -291,21 +291,21 @@
                         <td>15</td>
                         <td>28</td>
                         <td>7</td>
-                        <td>14</td>
-                        <td>W</td>
-                        <td>44</td>
+                        <td>13</td>
+                        <td>WSW</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>15</td>
-                        <td>27</td>
-                        <td>6</td>
-                        <td>18</td>
+                        <td>25</td>
+                        <td>7</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>52</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -353,9 +353,9 @@
                "data":[
                  "17",
                  "18",
-                 "19",
+                 "20",
                  "21",
-                 "21"
+                 "22"
                ]
              },
              {
@@ -366,9 +366,9 @@
                "data":[
                  "17",
                  "18",
-                 "19",
+                 "20",
                  "21",
-                 "21"
+                 "22"
                ]
              }
            ]
@@ -423,7 +423,7 @@
                "data":[
                  "0",
                  "0",
-                 "2",
+                 "0",
                  "15",
                  "15"
                ]
@@ -434,10 +434,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "44",
-                 "37",
-                 "31",
+                 "39",
+                 "32",
                  "28",
-                 "27"
+                 "25"
                ]
              },
              {
@@ -446,10 +446,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
-                 "7",
-                 "11",
-                 "44",
-                 "52"
+                 "8",
+                 "13",
+                 "41",
+                 "43"
                ]
              }
            ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 13:05:03 2018</p>
+         Last Run: Wed Jul 18 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -487,39 +487,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>0</td>
-                        <td>32</td>
+                        <td>Clear</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>SE</td>
-                        <td>34</td>
+                        <td>35</td>
+                        <td>1</td>
+                        <td>16</td>
+                        <td>ESE</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>Clear</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>1</td>
+                        <td>39</td>
                         <td>0</td>
-                        <td>36</td>
-                        <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>33</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>9</td>
-                        <td>43</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>11</td>
+                        <td>46</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>ESE</td>
-                        <td>29</td>
+                        <td>14</td>
+                        <td>E</td>
+                        <td>26</td>
                      </tr>
                   </tbody>
                </table>
@@ -563,9 +563,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
                  "22",
-                 "20"
+                 "21",
+                 "19"
                ]
              },
              {
@@ -574,9 +574,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
                  "22",
-                 "20"
+                 "21",
+                 "19"
                ]
              }
            ]
@@ -627,9 +627,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "0",
-                 "9"
+                 "1",
+                 "1",
+                 "11"
                ]
              },
              {
@@ -637,9 +637,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "32",
-                 "36",
-                 "43"
+                 "35",
+                 "39",
+                 "46"
                ]
              },
              {
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "34",
-                 "33",
-                 "29"
+                 "27",
+                 "27",
+                 "26"
                ]
              }
            ]
