--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 16:05:04 2018</p>
+         Last Run: Wed Jul 18 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -31,26 +31,26 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>55</td>
-                        <td>55</td>
-                        <td>3</td>
-                        <td>16</td>
-                        <td>SSE</td>
-                        <td>64</td>
+                        <td>54</td>
+                        <td>2</td>
+                        <td>14</td>
+                        <td>SE</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>47</td>
+                        <td>55</td>
                         <td>58</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>61</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -62,19 +62,19 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>71</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>10</td>
-                        <td>61</td>
+                        <td>8</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>58</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,7 +119,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "22",
                  "21",
                  "20",
                  "20"
@@ -131,7 +131,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "22",
                  "21",
                  "20",
                  "20"
@@ -187,9 +187,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "55",
-                 "47",
+                 "55",
                  "15",
-                 "10"
+                 "8"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
+                 "54",
                  "58",
                  "59",
-                 "61"
+                 "60"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
-                 "61",
-                 "71",
-                 "58"
+                 "80",
+                 "77",
+                 "73",
+                 "60"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 16:05:04 2018</p>
+         Last Run: Wed Jul 18 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 16:05:04 2018</p>
+         Last Run: Wed Jul 18 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -490,7 +490,7 @@
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>35</td>
                         <td>1</td>
                         <td>16</td>
@@ -514,7 +514,7 @@
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>7</td>
+                        <td>10</td>
                         <td>45</td>
                         <td>0</td>
                         <td>14</td>
@@ -627,9 +627,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "0",
                  "1",
-                 "1",
-                 "7"
+                 "10"
                ]
              },
              {
