--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 17:05:03 2018</p>
+         Last Run: Wed Jul 18 18:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -38,19 +38,19 @@
                         <td>2</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>80</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>55</td>
+                        <td>50</td>
                         <td>58</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>SE</td>
-                        <td>77</td>
+                        <td>ESE</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -69,7 +69,7 @@
                         <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>8</td>
+                        <td>14</td>
                         <td>60</td>
                         <td>0</td>
                         <td>13</td>
@@ -187,9 +187,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "55",
-                 "55",
+                 "50",
                  "15",
-                 "8"
+                 "14"
                ]
              },
              {
@@ -208,8 +208,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "77",
+                 "83",
+                 "79",
                  "73",
                  "60"
                ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 17:05:03 2018</p>
+         Last Run: Wed Jul 18 18:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,9 +253,9 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>3</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>3</td>
                      </tr>
@@ -265,7 +265,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>4</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -277,11 +277,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>18</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -289,7 +289,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>7</td>
                         <td>14</td>
                         <td>WSW</td>
@@ -433,10 +433,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "39",
-                 "33",
-                 "29",
+                 "43",
+                 "38",
+                 "32",
+                 "28",
                  "27"
                ]
              },
@@ -447,7 +447,7 @@
                "data":[
                  "3",
                  "11",
-                 "18",
+                 "19",
                  "41",
                  "43"
                ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 17:05:03 2018</p>
+         Last Run: Wed Jul 18 18:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -490,12 +490,12 @@
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>35</td>
                         <td>1</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>27</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -503,23 +503,23 @@
                         <td>21</td>
                         <td>21</td>
                         <td>1</td>
-                        <td>39</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>27</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>10</td>
-                        <td>45</td>
+                        <td>5</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>26</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -627,9 +627,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
                  "1",
-                 "10"
+                 "1",
+                 "5"
                ]
              },
              {
@@ -638,8 +638,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "35",
-                 "39",
-                 "45"
+                 "40",
+                 "46"
                ]
              },
              {
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "27",
-                 "26"
+                 "24",
+                 "20",
+                 "17"
                ]
              }
            ]
