--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 21:05:21 2018</p>
+         Last Run: Wed Jul 18 22:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,23 +33,23 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>55</td>
-                        <td>55</td>
+                        <td>53</td>
+                        <td>54</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>77</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>40</td>
-                        <td>56</td>
+                        <td>38</td>
+                        <td>55</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>ESE</td>
+                        <td>11</td>
+                        <td>SE</td>
                         <td>78</td>
                      </tr>
                      <tr>
@@ -58,23 +58,23 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>56</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>75</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>15</td>
-                        <td>58</td>
+                        <td>21</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>63</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "55",
-                 "40",
+                 "53",
+                 "38",
                  "15",
-                 "15"
+                 "21"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "54",
                  "55",
-                 "56",
-                 "56",
-                 "58"
+                 "54",
+                 "55"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
+                 "80",
                  "78",
-                 "75",
-                 "63"
+                 "71",
+                 "57"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 21:05:21 2018</p>
+         Last Run: Wed Jul 18 22:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>3</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -269,7 +269,7 @@
                         <td>4</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>6</td>
                         <td>13</td>
                         <td>W</td>
@@ -293,7 +293,7 @@
                         <td>7</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -433,9 +433,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
+                 "44",
                  "38",
-                 "33",
+                 "34",
                  "30",
                  "28"
                ]
@@ -446,9 +446,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "8",
-                 "14",
+                 "15",
                  "19",
-                 "43",
+                 "44",
                  "45"
                ]
              }
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 21:05:21 2018</p>
+         Last Run: Wed Jul 18 22:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -495,7 +495,7 @@
                         <td>1</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -647,7 +647,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "25",
+                 "24",
                  "20",
                  "16"
                ]
