--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 22:05:07 2018</p>
+         Last Run: Wed Jul 18 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>53</td>
-                        <td>54</td>
+                        <td>51</td>
+                        <td>52</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
-                        <td>80</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>38</td>
-                        <td>55</td>
+                        <td>33</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -58,23 +58,23 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>54</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>ESE</td>
-                        <td>71</td>
+                        <td>13</td>
+                        <td>E</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>21</td>
-                        <td>55</td>
+                        <td>32</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>E</td>
-                        <td>57</td>
+                        <td>14</td>
+                        <td>ENE</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "53",
-                 "38",
+                 "51",
+                 "33",
                  "15",
-                 "21"
+                 "32"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "55",
-                 "54",
-                 "55"
+                 "52",
+                 "53",
+                 "52",
+                 "56"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "78",
-                 "71",
-                 "57"
+                 "77",
+                 "79",
+                 "67",
+                 "56"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 22:05:07 2018</p>
+         Last Run: Wed Jul 18 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>3</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -265,7 +265,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>36</td>
                         <td>4</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -277,7 +277,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>31</td>
                         <td>6</td>
                         <td>13</td>
                         <td>W</td>
@@ -289,7 +289,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>30</td>
+                        <td>28</td>
                         <td>7</td>
                         <td>14</td>
                         <td>W</td>
@@ -301,7 +301,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>7</td>
                         <td>18</td>
                         <td>W</td>
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "38",
-                 "34",
-                 "30",
-                 "28"
+                 "43",
+                 "36",
+                 "31",
+                 "28",
+                 "27"
                ]
              },
              {
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 22:05:07 2018</p>
+         Last Run: Wed Jul 18 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
