--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 23:05:03 2018</p>
+         Last Run: Thu Jul 19 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,48 +33,48 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>51</td>
+                        <td>54</td>
                         <td>52</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>77</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>33</td>
                         <td>53</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>79</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>15</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>30</td>
                         <td>52</td>
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>67</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>32</td>
-                        <td>56</td>
+                        <td>19</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>56</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,8 +120,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "22",
-                 "21",
-                 "21",
+                 "22",
+                 "22",
                  "21"
                ]
              },
@@ -132,8 +132,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "22",
-                 "21",
-                 "21",
+                 "22",
+                 "22",
                  "21"
                ]
              }
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "51",
+                 "54",
                  "33",
-                 "15",
-                 "32"
+                 "30",
+                 "19"
                ]
              },
              {
@@ -200,7 +200,7 @@
                  "52",
                  "53",
                  "52",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
-                 "79",
-                 "67",
-                 "56"
+                 "75",
+                 "78",
+                 "66",
+                 "54"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 23:05:03 2018</p>
+         Last Run: Thu Jul 19 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 23:05:03 2018</p>
+         Last Run: Thu Jul 19 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -495,7 +495,7 @@
                         <td>1</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>24</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -514,12 +514,12 @@
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>47</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>16</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -629,7 +629,7 @@
                "data":[
                  "3",
                  "3",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
+                 "22",
                  "20",
-                 "16"
+                 "18"
                ]
              }
            ]
