--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 04:05:18 2018</p>
+         Last Run: Thu Jul 19 05:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,48 +33,48 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>47</td>
-                        <td>56</td>
+                        <td>52</td>
+                        <td>54</td>
                         <td>2</td>
-                        <td>13</td>
-                        <td>SE</td>
-                        <td>84</td>
+                        <td>11</td>
+                        <td>SSE</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>41</td>
-                        <td>55</td>
-                        <td>2</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>40</td>
+                        <td>54</td>
+                        <td>1</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>75</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>35</td>
-                        <td>53</td>
+                        <td>33</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>63</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>14</td>
-                        <td>54</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>20</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>E</td>
-                        <td>65</td>
+                        <td>13</td>
+                        <td>ENE</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,9 +120,9 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "21",
                  "22",
-                 "22"
+                 "22",
+                 "21"
                ]
              },
              {
@@ -132,9 +132,9 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "21",
                  "22",
-                 "22"
+                 "22",
+                 "21"
                ]
              }
            ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "47",
-                 "41",
-                 "35",
-                 "14"
+                 "52",
+                 "40",
+                 "33",
+                 "20"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "55",
-                 "53",
-                 "54"
+                 "54",
+                 "54",
+                 "52",
+                 "56"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "84",
-                 "75",
-                 "63",
-                 "65"
+                 "80",
+                 "78",
+                 "71",
+                 "64"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 04:05:18 2018</p>
+         Last Run: Thu Jul 19 05:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 04:05:18 2018</p>
+         Last Run: Thu Jul 19 05:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -503,7 +503,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
@@ -638,7 +638,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "36",
-                 "41",
+                 "40",
                  "48"
                ]
              },
@@ -666,7 +666,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 04:05:18 2018</p>
+         Last Run: Thu Jul 19 05:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -695,7 +695,7 @@
                         <td>2</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -707,19 +707,19 @@
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>43</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>38</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -731,7 +731,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>32</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -861,7 +861,7 @@
                "data":[
                  "3",
                  "4",
-                 "4",
+                 "5",
                  "9",
                  "10"
                ]
@@ -883,10 +883,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "43",
-                 "38",
-                 "32",
+                 "45",
+                 "42",
+                 "37",
+                 "31",
                  "29"
                ]
              }
